--- a/TableMates/TableMates.csproj
+++ b/TableMates/TableMates.csproj
@@ -174,6 +174,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201601280525588_InitialCreate.cs" />
+    <Compile Include="Migrations\201601280525588_InitialCreate.Designer.cs">
+      <DependentUpon>201601280525588_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201601290417034_UserChanges.cs" />
+    <Compile Include="Migrations\201601290417034_UserChanges.Designer.cs">
+      <DependentUpon>201601290417034_UserChanges.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Appointment.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -232,7 +241,14 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201601280525588_InitialCreate.resx">
+      <DependentUpon>201601280525588_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201601290417034_UserChanges.resx">
+      <DependentUpon>201601290417034_UserChanges.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
